# wasi-nn-edge-demo-lib

./: .dir-locals.el  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: http.rs  interface.rs  lib.rs  nn.rs
